# knowledgeforge

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  TASK_lightweight_watcher.md  USER.md  config.yaml  knowledgeforge-api.service  knowledgeforge-auth-gateway.service  knowledgeforge-watcher.service  pyproject.toml
data/enriched_conversations/: _checkpoint.json  _stats.json
docs/: agent-bootstrap-prompt-knowledgeforge-kanban.md  api-reference.md  architecture.md  configuration.md  deterministic-ingest-queue.md  discovery-to-semantic-promotion.md  episodic-memory-integration-plan.md  high-trust-shared-memory-blueprint.md  linkback-and-semantic-audit.md  local-historical-session-ingestion.md  ob1-knowledgeforge-integration-analysis-2026-04-23.md  operations.md  phase-a-automation-and-ergonomics.md  remote-agent-bootstrap-tailscale.md  remote-mcp-client-configs.md  semantic-collections.md  semantic-lifecycle-management.md  semantic-query-surfaces.md  semantic-records-api.md  stale-review-and-coverage-gap-audit.md  structured-memory-extraction.md  tailscale-funnel-auth-gateway.md  trust-metadata-model.md  veritas-task-description-template.md
scripts/: enrich_episodic_memory.py  ingest_local_historical_sessions.py  inventory_historical_sessions.py  kf-status.sh  migrate_episodic_memory.py  presidio_scrub_chromadb.py  promote-suggested.sh  review-stale.sh  run.sh  semantic-health.sh  setup.ps1  setup.sh
src/knowledgeforge/: config.py  (+1 more)
tests/: test_batch_extraction.py  test_codex_sqlite.py  test_historical_json.py  test_ingest_queue.py  test_source_inventory.py
(+46 files in other folders)
